<?xml version="1.0"?>
<package format="2">
  <name>scanlite_analysis</name>
  <version>0.1.0</version>
  <description>ROS package for bone segmentation using the PyCATMAUS library</description>
  
  <maintainer email="Nadia.khodaie@gmail.com">Nadia khodaei</maintainer>
  <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <export>
  </export>
</package>
